prevent horizontal scrolling site wide

--- a/themes/community-land-trust/src/scss/_elements.scss
+++ b/themes/community-land-trust/src/scss/_elements.scss
@@ -51,6 +51,10 @@ body.noScroll {
   overflow: hidden;
 }
 
+.hfeed.site.body-container {
+  overflow-x: hidden;
+}
+
 blockquote,
 q {
   quotes: '' '';
